feat: add list and footer

--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -8,33 +8,18 @@
   align-items: flex-end;
 }
 
-@media (min-width: 550px) {
-  .site-branding {
-    display: none;
-  }
-}
-
-.site-branding {
-  display: flex;
-  justify-content: center;
-  border-bottom: 4px solid #19498d;
+.page-header {
+  background: url("images/backgrounds/bg-header.svg") bottom no-repeat;
+  background-size: cover;
 
   img {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    width: 120px;
-    height: auto;
+    max-width: 250px;
+    margin-bottom: -80px;
   }
-}
-
-.page-header {
-  background: var(--sky-dark) url('images/hills.png') bottom no-repeat;
-  background-size: 100% auto;
 
   .container {
     display: flex;
     justify-content: space-between;
-    padding-top: 2.5rem;
   }
   &::after {
     content: none;
