--- a/sass/libs/skeleton/skeleton.scss
+++ b/sass/libs/skeleton/skeleton.scss
@@ -32,7 +32,7 @@
 // @import 'links';
 // @import 'buttons';
 @import 'forms';
-@import 'lists';
+// @import 'lists';
 // @import 'code';
 @import 'tables';
 @import 'spacing';
