--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -39,17 +39,21 @@ $icon-list: (
 // Footer
 .footer {
   width: 100%;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin-top: 5rem;
   margin-bottom: 3rem;
+
+  a,
+  p {
+    font-size: 1.4rem;
+  }
 
   .container {
     @extend %flex-column;
   }
 
   &__logo {
-    display: flex;
-    justify-content: center;
+    @extend .flex-center;
     margin-bottom: 32px;
 
     @include desktop {
@@ -74,6 +78,7 @@ $icon-list: (
 
       li {
         margin-right: 12px;
+        font-size: 1.4rem;
 
         @include desktop {
           &::after {
@@ -91,16 +96,52 @@ $icon-list: (
   }
 
   @include desktop {
+    a,
+    p {
+      font-size: 1.4rem;
+    }
+
     .container {
       flex-direction: row;
       justify-content: space-evenly;
       align-items: flex-end;
     }
+  }
+}
 
-    &__partners {
-      justify-content: flex-start;
-      flex-wrap: nowrap;
-      margin-bottom: 0;
+.mega-footer {
+  background-image: url('./images/footer/bg-megafooter.svg');
+  background-size: contain;
+  padding-bottom: 100px;
+  
+  &__logo {
+    @include margin-tb(-80px, 48px);
+  }
+
+  a,
+  p {
+    font-size: 1.4rem;
+  }
+
+  @include list-icon($fa-var-chevron-right);
+
+  .menu-title {
+    color: var(--dark-blue);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  hr {
+    height: 1px;
+    border: none;
+    color: var(--blue);
+    background-color: var(--blue);
+  }
+
+  @include desktop {
+    a,
+    p {
+      font-size: 1.4rem;
     }
   }
 }
