--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -57,7 +57,7 @@ p {
   font-size: 1.5rem;
 }
 
-/* Larger than phablet */
+/* Larger than tablet */
 @media (min-width: 550px) {
   h1 {
     font-size: 4rem;
