--- a/sass/mm-theme/pages/_content-page.scss
+++ b/sass/mm-theme/pages/_content-page.scss
@@ -9,8 +9,54 @@
     height: auto;
   }
 
-  .featured-image-actions {
-    display: flex;
-    justify-content: space-between;
+  .utility {
+    background-color: var(--blue);
+    font-size: 1.9rem;
+
+    &__menu {
+      @include padding-y(15px);
+      display: flex;
+      justify-content: space-between;
+
+      a {
+        color: #fff;
+      }
+
+      #breadcrumbs {
+        color: #fff;
+        &:first-child {
+          font-weight: 800;
+        }
+
+        i {
+          color: var(--dark-blue);
+        }
+
+        a,
+        .breadcrumb_last {
+          text-decoration: underline;
+          font-weight: 300;
+        }
+      }
+    }
+
+    &__actions {
+      a {
+        padding-right: 10px;
+
+        &:nth-child(n + 3) {
+          &::before {
+            content: "";
+            border-left: 1px solid var(--dark-blue);
+            color: var(--dark-blue);
+            padding-right: 12px;
+          }
+        }
+      }
+
+      @include mobile-only {
+        display: none;
+      }
+    }
   }
 }
