--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -3,136 +3,7 @@
 --------------------------------------------------------------*/
 
 #front-page {
-  background-image: url(images/front-page/bg-bubbles.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 80vh;
+  min-height: 70vh;
 
-  input[type='email'],
-  input[type='number'],
-  input[type='search'],
-  input[type='text'],
-  input[type='tel'],
-  input[type='url'],
-  input[type='password'],
-  textarea,
-  select {
-    height: 61px;
-    border: 1px solid #fff;
-    border-radius: 16px;
-    background-color: transparent;
-    font-size: 2rem;
-    padding: 11px 17px;
-    color: #fff;
-    max-width: 100%;
-  
-    &::placeholder {
-      color: #fff;
-      font-weight: bold;
-    }
-  }
-  
-  input[type='email']:focus,
-  input[type='number']:focus,
-  input[type='search']:focus,
-  input[type='text']:focus,
-  input[type='tel']:focus,
-  input[type='url']:focus,
-  input[type='password']:focus,
-  textarea:focus,
-  select:focus {
-    border: 1px solid var(--orange);
-    outline: 0;
-  }
-
-  .moving {
-    background-color: #fff;
-    padding: 0 7% 2%;
-
-    &__header {
-      text-align: center;
-      margin-bottom: 50px;
-      @include phablet-only {
-        img {
-          display: none;
-        }
-      }
-
-      img {
-        width: 246px;
-        height: auto;
-        margin-top: 50px;
-      }
-
-      h1 {
-        font-size: 2.6rem;
-        color: var(--dark-blue);
-        margin-top: 35px;
-        margin-bottom: 20px;
-      }
-
-      p {
-        font-size: 1.4rem;
-      }
-    }
-
-    .resources h2 {
-      color: #a1000d;
-      background-color: #ffc7cd;
-    }
-    .schools h2 {
-      color: #573476;
-      background-color: #e5cefa;
-    }
-    .sports h2 {
-      color: #003867;
-      background-color: #cceffc;
-    }
-
-    // .card {
-    //   &__title {
-    //     h2 {
-    //       font-size: 1.8rem;
-    //       text-align: center;
-    //       @include padding-y(18px);
-
-    //       @include tablet {
-    //         text-align: left;
-    //       }
-    //     }
-
-    //     img {
-    //       @extend .u-full-width;
-    //       margin-bottom: 2.3rem;
-    //     }
-    //   }
-
-    //   @include tablet {
-    //     padding-left: 0;
-    //     h2 {
-    //       padding-left: 2.1rem;
-    //     }
-    //   }
-
-    //   &__content {
-    //     font-family: Arial, Helvetica, sans-serif;
-    //     div {
-    //       margin-bottom: 17px;
-    //     }
-    //     h6 {
-    //       color: #2f78ca;
-    //       font-weight: 600;
-    //       font-size: 1.4rem;
-    //     }
-    //   }
-    // }
-  }
-
-  @media (min-width: 400px) {
-    @include padding-y(3%);
-    .moving {
-      border-radius: 1rem;
-      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
-    }
-  }
+  background-color: #e7e7e7;
 }
