--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,6 +58,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'mm-theme/base/typography';
 @import 'mm-theme/base/scaffolding';
 @import 'mm-theme/base/header';
+@import 'mm-theme/base/hero';
 
 /*--------------------------------------------------------------
 # Overwrites Skeleton Framework
