feat: adjust header

--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -36,6 +36,10 @@
     margin-bottom: -10px;
     z-index: 2;
 
+    &:hover {
+      cursor: pointer;
+    }
+
     @include desktop {
       margin-bottom: -80px;
     }
