--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -7,6 +7,7 @@
   border-radius: 0;
   color: #fff;
   text-shadow: 0 1px 3px #589429;
+  font-size: 1.6rem;
   font-weight: 800;
   box-shadow: none;
   background-color: transparent;
@@ -19,29 +20,41 @@
 .page-header {
   background: url("images/backgrounds/bg-header.png") bottom no-repeat;
   background-size: cover;
-  padding-top: 10px;
+  padding-top: 4px;
+  margin-bottom: 12px;
+
+  @include desktop {
+    @include padding-lr(43px, 36px);
+    padding-top: 14px;
+    margin-bottom: 23px;
+  }
 
   &::after {
     content: none;
   }
 
-  .container {
+  &__container {
     display: flex;
     justify-content: space-between;
-    max-width: 1366px !important;
+    @include margin-x(10px);
   }
 
   .nav-logo {
-    max-width: 40%;
-    margin-bottom: -10px;
+    max-width: 147px;
+    margin-bottom: -12px;
     z-index: 2;
+    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=3, Color='#000')";
+    -webkit-filter: drop-shadow(0 3px 3px rgba(0,0,0,0.4));
+    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=3, Color='#000')";
 
     &:hover {
       cursor: pointer;
     }
 
     @include desktop {
-      margin-bottom: -80px;
+      max-width: 100%;
+      max-height: 139px;
+      margin-bottom: -23px;
     }
   }
 
@@ -49,6 +62,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: space-between;
     width: 100%;
 
     .menu-service {
@@ -58,7 +72,7 @@
       .btn-dark-blue {
         margin-left: 16px;
       }
-  
+
       i {
         color: var(--dark-blue);
         font-size: 2.5rem;
@@ -66,10 +80,8 @@
     }
 
     .menu-desktop {
-      @include margin-y(10px);
+      // @include margin-y(10px);
       text-transform: uppercase;
-      width: 95%;
-
 
       a {
         @extend %header-item;
@@ -78,12 +90,15 @@
       #menu-desktop {
         display: flex;
         list-style: none;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
         @include margin-y(0);
 
         li {
-          @include margin-y(1rem);
+          margin-bottom: 20px;
+          &:nth-child(2) {
+            @include padding-x(45px);
+          }
         }
       }
     }
@@ -104,7 +119,7 @@
 .menu-mobile {
   color: #fff;
   margin: 0;
-  
+
   @include list-icon($fa-var-chevron-right);
 
   .menu-item {
