--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,6 +59,11 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'fonts/fontawesome/scss/solid';
 
 /*--------------------------------------------------------------
+# Reset
+--------------------------------------------------------------*/
+// @import 'reset';
+
+/*--------------------------------------------------------------
 # Munch & Move Theme
 --------------------------------------------------------------*/
 @import 'mm-theme/base/variables';
