--- a/sass/mm-theme/base/_hero.scss
+++ b/sass/mm-theme/base/_hero.scss
@@ -16,8 +16,8 @@
   &__menu {
     @include padding-y(10px);
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 
     a {
       color: #fff;
@@ -28,22 +28,22 @@
       font-size: 1.6rem;
 
       &:first-child {
-        font-weight: 800;
+        font-weight: var(--extra-bold);
       }
-      
+
       i {
         color: var(--dark-blue);
         font-size: 1.4rem;
       }
-      
+
       a {
         text-decoration: underline;
-        font-weight: 300;
+        font-weight: var(--semi-bold);
         @include padding-x(8px);
       }
 
       .breadcrumb_last {
-        font-weight: 300;
+        font-weight: var(--semi-bold);
         padding-left: 8px;
       }
     }
@@ -51,15 +51,19 @@
 
   &__actions {
     a {
-      padding-right: 8px;
       font-size: 1.6rem;
-
+      &:nth-child(-n + 2) {
+        padding-right: 16px;
+        i {
+          padding-right: 8px;
+        }
+      }
       &:nth-child(n + 3) {
         &::before {
           content: "";
           border-left: 1px solid var(--dark-blue);
           color: var(--dark-blue);
-          padding-right: 12px;
+          padding-right: 8px;
         }
       }
     }
