--- a/sass/mm-theme/base/_scaffolding.scss
+++ b/sass/mm-theme/base/_scaffolding.scss
@@ -6,6 +6,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  font-family: proxima-nova, sans-serif, "HelveticaNeue", "Helvetica Neue",
+    Helvetica, Arial;
 }
 
 section,
