--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -20,25 +20,25 @@ h6 {
 h1 {
   font-size: 2.0rem;
   line-height: 1.2;
-  font-weight: 900;
+  font-weight: var(--black);
   color: var(--dark-blue);
 }
 h2 {
   font-size: 1.8rem;
   line-height: 1.25;
-  font-weight: 900;
+  font-weight: var(--black);
   color: var(--blue);
 }
 h3 {
   font-size: 1.7rem;
   line-height: 1.3;
-  font-weight: 900;
+  font-weight: var(--black);
   color: var(--blue);
 }
 h4 {
   font-size: 1.6rem;
   line-height: 1.35;
-  font-weight: 800;
+  font-weight: var(--extra-bold);
   color: #fff;
 }
 h5 {
@@ -53,7 +53,7 @@ h6 {
 p {
   margin: 0;
   color: #000;
-  font-weight: 300;
+  font-weight: var(--regular);
   font-size: 1.5rem;
 }
 
@@ -91,26 +91,4 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-/* Base Styles
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-// /* NOTE
-// html is set to 62.5% so that all the REM measurements throughout Skeleton
-// are based on 10px sizing. So basically 1.5rem = 15px :) */
-// html {
-//   font-size: 62.5%;
-// }
-// body {
-//   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-//   line-height: 1.6;
-//   font-weight: 400;
-//   font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
-//   Helvetica, Arial;
-//   color: #222;
-// }
-
-body {
-  min-height: 100%;
-  font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
 }
