--- a/sass/skeleton/_base.scss
+++ b/sass/skeleton/_base.scss
@@ -1,3 +1,4 @@
+
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
@@ -10,7 +11,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
-  Helvetica, Arial;
+  font-family: 'Raleway', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial,
+    sans-serif;
   color: #222;
 }
