design: home page

--- a/sass/mm-theme/base/_buttons.scss
+++ b/sass/mm-theme/base/_buttons.scss
@@ -24,7 +24,5 @@ button:focus,
 input[type='submit']:focus,
 input[type='reset']:focus,
 input[type='button']:focus {
-  box-shadow: 2px 2px 5px var(--grey);
-  transition: box-shadow 0.3s ease-in-out;
-  outline: 0;
+  transition: background-color 0.2s ease-in-out;
 }
