--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -1,6 +1,7 @@
 /*--------------------------------------------------------------
 # Front Page
 --------------------------------------------------------------*/
+
 .entry-content {
   h1,
   .entry-title {
@@ -17,6 +18,51 @@
 
   .section-intro {
     margin-bottom: 64px;
+    .side-article {
+      font-weight: var(--bold);
+
+      a {
+        color: var(--blue);
+      }
+    }
+
+    @include mobile-only {
+      .side-article {
+        margin-top: 20px;
+        padding-top: 20px;
+        border-top: 1px solid var(--blue);
+      }
+    }
+
+    @include desktop {
+      .row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+      }
+
+      .side-article {
+        padding-left: 30px;
+        border-left: 1px solid var(--blue);
+      }
+    }
+  }
+
+  // Brand Mascot Horizontal Line
+  --mascot-size: 90px;
+  --mascot-desktop: 150px;
+
+  @mixin mascot-hr($color) {
+    position: absolute;
+    top: calc(var(--mascot-size) / 2);
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    border: 1px solid var($color);
+
+    @include desktop {
+      top: calc(var(--mascot-desktop) / 2);
+    }
   }
 
   .section-category {
@@ -26,6 +72,22 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      position: relative;
+
+      img {
+        @include padding-x(24px);
+        background-color: #fff;
+        max-height: var(--mascot-size);
+
+        @include desktop {
+          max-height: var(--mascot-size + 60);
+        }
+      }
+
+      hr {
+        @include mascot-hr(--blue);
+      }
+
       .columns {
         margin: 0;
       }
