--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,6 +96,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'mm-theme/pages/front-page';
 @import 'mm-theme/pages/single-page';
 @import 'mm-theme/pages/content-page';
+@import 'mm-theme/pages/privacy-policy-page';
 @import 'mm-theme/pages/404';
 
 /*--------------------------------------------------------------
