style: add line behind-text

--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -2,6 +2,32 @@
 # Front Page
 --------------------------------------------------------------*/
 
+%line-behind-title {
+  h2 {
+    position: relative;
+    z-index: 1;
+
+    &:before {
+      border-top: 2px solid var(--dark-blue);
+      content: "";
+      margin: 0 auto; /* this centers the line to the full width specified */
+      position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
+      top: 50%;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      z-index: -1;
+    }
+
+    span {
+      /* to hide the lines from behind the text, you have to set the background color the same as the container */
+      background: #fff;
+      padding: 0 40px;
+    }
+  }
+}
+
 .entry-content {
   h1,
   .entry-title {
@@ -67,11 +93,11 @@
 
   .section-category {
     &__header {
-      text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
       position: relative;
 
       img {
@@ -100,6 +126,15 @@
     .cards {
       @include grid(3);
       @include margin-tb(40px, 56px);
+    }
+  }
+
+  .section-video {
+    @extend %line-behind-title;
+
+    .cards {
+      @include grid(2);
+      @include margin-tb(32px, 56px);
     }
   }
 }
