--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -23,8 +23,7 @@
   padding-top: 4px;
 
   @include desktop {
-    @include padding-lr(43px, 36px);
-    padding-top: 14px;
+    padding: 14px 43px 0 36px;
   }
 
   &::after {
@@ -34,12 +33,13 @@
   &__container {
     display: flex;
     justify-content: space-between;
-    @include margin-x(10px);
+    margin: 0 10px;
   }
 
   .nav-logo {
     max-width: 147px;
     margin-bottom: -12px;
+    margin-right: 62px;
     z-index: 2;
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=1, Color='#000')";
     -webkit-filter: drop-shadow(0 1px 5px rgba(0, 0, 0, 0.4));
@@ -64,14 +64,19 @@
     width: 100%;
 
     .menu-service {
-      @extend .flex-centered;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      width: 100%;
 
       .btn-dark-blue {
         margin-left: 16px;
+        white-space: nowrap;
       }
 
-      #navbar-search {
-        display: none
+      #navbar-search,
+      #navbar-btn-search {
+        display: none;
       }
 
       #search-icon {
@@ -87,15 +92,19 @@
         font-size: 1.5rem;
         color: var(--blue);
         margin-right: 8px;
+        width: 100%;
+        height: 100%;
 
         &::placeholder {
-          color: var(--dark-blue);
+          color: var(--blue);
+          // color: var(--dark-blue);
         }
       }
     }
 
     .menu-desktop {
       text-transform: uppercase;
+      width: 100%;
 
       a {
         @extend %header-item;
@@ -107,15 +116,19 @@
 
       #menu-desktop {
         display: flex;
-        list-style: none;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
+        list-style: none;
+
         @include margin-y(0);
 
         li {
-          margin-bottom: 20px;
-          &:nth-child(2) {
-            @include padding-x(45px);
+          margin-bottom: 0;
+          padding-bottom: 20px;
+
+          .active {
+            color: var(--blue);
+            background-color: #fff;
           }
         }
       }
@@ -162,6 +175,46 @@
           color: red;
         }
       }
+    }
+  }
+}
+
+.mega-menu {
+  .tab-content {
+    display: none;
+    @include margin-y(55px);
+  }
+
+  .card__content {
+    padding: 24px 30px;
+  }
+
+  &__list {
+    @extend .list-chevron-blue;
+
+    li {
+      font-size: 1.6rem;
+      font-weight: var(--extra-bold);
+      padding-bottom: 16px;
+      border-bottom: 1px solid var(--blue);
+      text-transform: uppercase;
+    }
+  }
+
+  &__article {
+    display: flex;
+
+    img {
+      max-width: 55%;
+      padding-right: 16px;
+    }
+
+    h4 {
+      color: var(--dark-blue);
+    }
+
+    &:first-child {
+      margin-bottom: 32px;
     }
   }
 }
